lox-tests/tests/variable/undefined_local.stderr
ERROR: Undefined variable name 'notDefined'
 --> 2:9
  |
2 |   print notDefined;  // expect runtime error: Undefined variable 'notDefined'.
  |         ^--------^
